[DEV] try to fix common safari issue caused by browser toolbar

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@ body {
   height: -webkit-fill-available;
   width: 100vw;
   margin: 0;
-  overflow: hidden;
   box-sizing: border-box;
   font-family: 'Roboto';
 }
